@@ -1,3 +1,7 @@
+2000-06-12  Benjamin Kosnik  <bkoz@purist.soma.redhat.com>
+
+	* mkcheck.in: Clean up confusion regarding NAME, PRE_NAME.
+
 2000-06-08  Branko Cibej  <branko.cibej@hermes.si>
 
 	* acinclude.m4 (GLIBCPP_CHECK_BUILTIN_MATH_SUPPORT):  Check for
